--- a/features/cards.css
+++ b/features/cards.css
@@ -1,4 +1,13 @@
+body {
+  font-family: Open Sans, Arial, Helvetica, sans-serif;
+}
 
+.header {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-family: Open Sans, Arial, Helvetica, sans-serif;
+}
 
 
 
