--- a/features/cards.css
+++ b/features/cards.css
@@ -9,6 +9,16 @@ body {
   font-family: Open Sans, Arial, Helvetica, sans-serif;
 }
 
+.progress {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+button {
+  margin-top: 40px;
+  
+}
+
 
 
 .card-wrapper {
