adding visibility to cards with functionality to btns

--- a/features/cards.css
+++ b/features/cards.css
@@ -16,7 +16,13 @@ body {
 
 button {
   margin-top: 40px;
+  display: flex;
   
+}
+
+.cards_flexcontainer {
+  display: flex;
+  justify-content: center;
 }
 
 
