--- a/features/cards.css
+++ b/features/cards.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #ec9e03;
   font-family: Open Sans, Arial, Helvetica, sans-serif;
 }
 
@@ -15,9 +16,18 @@ body {
 }
 
 button {
-  margin-top: 40px;
-  display: flex;
-  
+  background-color: #5d84f0; /* Green background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 10px 20px; /* Add some padding */
+  text-align: center; /* Center the text */
+  text-decoration: none; /* Remove underline */
+  display: inline-block; /* Make buttons inline */
+  font-size: 16px; /* Font size */
+  margin: 40px 2px; /* Add some margin between buttons */
+  cursor: pointer; /* Add a pointer on hover */
+  border-radius: 5px; /* Rounded corners */
+  transition: background-color 0.3s ease; /* Smooth background color transition */
 }
 
 .cards_flexcontainer {
@@ -62,3 +72,9 @@ button {
   .card-wrapper:hover .card-body {
     transform: rotateX(180deg);
   }
+
+.btns_flexcontainer {
+  display: flex;
+  justify-content: center;
+  gap:2rem
+}
