--- a/features/lesson.css
+++ b/features/lesson.css
@@ -68,11 +68,18 @@ h2 {
     padding-top: 1rem;
 }
 
-.lesson-questions {
+.lesson-questions,
+.explanation {
     grid-area: 4 / 1 / 6 / 6;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.explanation {
+    font-size: 1.1rem;
+    display: none;
+    text-align: center;
 }
 
 input.radio-input {
@@ -84,9 +91,23 @@ input.radio-input {
     border: 2px solid #e09018;
     border-radius: 10px;
     font-size: 1.1rem;
+    user-select: none;
 }
 
 .radio-input+label:hover {
     background-color: #eddabf;
     cursor: pointer;
+}
+
+.continue {
+    display: none;
+    position: relative;
+    left: 45%;
+    border: none;
+    border-radius: 10px;
+    padding: 1rem 0.5rem;
+    background-color: rgb(73, 182, 237);
+    color: #FFFFFF;
+    font-size: 1rem;
+    max-width: 130px;
 }
